<resources>
    <string name="app_name">Delivery Health</string>
    <string name="name_desc">HealthAged Paciente</string>
    <string name="enter_email">Digite seu email</string>
    <string name="enter_password">Digite sua senha</string>
    <string name="confirm_password">Confirme sua senha</string>
    <string name="enter_name">Digite seu nome</string>
    <string name="dt_birth"> Data de nascimento</string>
    <string name="enter_cpf"> Digite seu CPF</string>
    <string name="genre_m">Masculino</string>
    <string name="genre_f">Feminino</string>
    <string name="enter_phone1"> Telefone</string>
    <string name="enter_phone2"> Telefone II (Opcional)</string>
    <string name="login"> Login</string>
    <string name="maps_api_key">AIzaSyAb2eq_Q6DXxcN26EBOAXnLJkrrTclnq24</string>
    <string name="register">Cadastrar</string>
    <string name="link_register"> <u> Não tem uma conta? Crie uma </u></string>
    <string name="patient">Paciente</string>
    <string name="patient_info">Informações do paciente</string>
    <string name="obs">Observações</string>
    <string name="professionals"> Profissionais</string>
    <string name="professional"> Profissional</string>
    <string name="company">Empresa</string>
    <string name="associateds">Associados</string>
    <string name="about">Sobre</string>
    <string name="entertainment">Entretenimento</string>
    <string name="pharmacies">Fármacias</string>
    <string name="consultation">Consultas</string>
    <string name="empty_consultation">Não há nenhuma consulta marcada por aqui.</string>
    <string name="others">Outros</string>
    <string name="user_email">paciente@sidoso.com</string>
    <string name="user_name">Kaio giovanni</string>
    <string name="cancel">Cancelar</string>
    <string name="settings">Configurações</string>
    <string name="logout">Sair</string>
    <string name="ok">Ok</string>
    <string name="you">Você</string>
    <string name="message">Mensagem</string>

    <string name="desc_about">
            O aplicativo foi desenvolvido com o intuito de encurtar o relacionamento e acompanhamento dos profissionais de saúde e seus pacientes,
        promovendo um contato mais informal entre as partes.\n\n
        <b> Contato com a empresa: </b>\n\n
            Sinta-se à vontade para nos contatar pelo <i>(xxx) x xxxx-xxxx </i>, ou pelo <i> paciente@sidoso.com </i>.\n\n
        <b> Redes sociais: </b>\n\n
            Siga-nos no instagram: <i>\@_sidoso</i>
    </string>
    <string-array name="list_about_fragment">
        <item>Contato: <small> sidoso.paciente@gmail.com </small>
        </item>
        <item>Instagram: <small> instagram.com/\@_sidoso </small>
        </item>
    </string-array>

    <string-array name="list_settings_fragment">
        <item> Apagar todas as mensagens </item>
        <!-- <item> Desativar conta </item> -->
        <item> Sair </item>
    </string-array>

</resources>
