<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_menu_main"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_professionals"
            android:icon="@drawable/ic_account_box_black"
            android:title="@string/professionals" />

        <item
            android:id="@+id/nav_consultation"
            android:icon="@drawable/ic_local_hospital"
            android:title="@string/consultation" />

        <item
            android:id="@+id/nav_associateds"
            android:title="@string/associateds"
            android:icon="@drawable/ic_store_black" />

        <item
            android:id="@+id/nav_company"
            android:icon="@drawable/ic_work_black"
            android:title="@string/company" />

    </group>

    <group
        android:id="@+id/group_menu_2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black"
            android:title="@string/about" />
    </group>

</menu>