<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_professionals">

    <fragment
        android:id="@+id/nav_professionals"
        android:name="com.sidoso.paciente.ui.professionals.FragmentProfessionals"
        android:label="@string/professionals"
        tools:layout="@layout/fragment_professionals"/>

    <fragment
        android:id="@+id/nav_consultation"
        android:name="com.sidoso.paciente.ui.consultation.FragmentConsultation"
        android:label="@string/consultation"
        tools:layout="@layout/fragment_consultation"/>

    <fragment
        android:id="@+id/nav_associateds"
        android:name="com.sidoso.paciente.ui.associateds.FragmentAssociateds"
        android:label="@string/associateds"
        tools:layout="@layout/fragment_associateds"/>

    <fragment
        android:id="@+id/nav_company"
        android:name="com.sidoso.paciente.ui.company.FragmentCompany"
        android:label="@string/company"
        tools:layout="@layout/fragment_company"/>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.sidoso.paciente.ui.settings.FragmentSettings"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings"/>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.sidoso.paciente.ui.about.FragmentAbout"
        android:label="@string/about"
        tools:layout="@layout/fragment_about"/>

</navigation>