<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:layout_marginTop="2dp"
    app:cardCornerRadius="10dp"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_consulta_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:layout_margin="10dp"
            android:gravity="start"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:text="Titulo da consulta" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:weightSum="5">

            <TextView
                android:id="@+id/tv_consulta_date"
                android:layout_width="0dp"
                android:textStyle="italic"
                android:textSize="14sp"
                android:text="12-12-2020"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

            <TextView
                android:id="@+id/tv_consulta_status"
                android:layout_width="0dp"
                android:gravity="center"
                android:textStyle="bold"
                android:fontFamily="serif"
                android:textColor="@color/colorWhite"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:text="@string/patient_info" />

        <TextView
            android:id="@+id/tv_consulta_pac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corner"
            android:fontFamily="serif"
            android:text="@string/patient"
            android:padding="5dp"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:text="@string/professional" />

        <TextView
            android:id="@+id/tv_consulta_prof"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corner"
            android:fontFamily="serif"
            android:text="@string/professional"
            android:padding="5dp"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:text="@string/obs" />

        <TextView
            android:id="@+id/tv_consulta_obs"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:background="@drawable/corner"
            android:textStyle="italic"
            android:text="@string/obs"
            android:textColor="@color/colorGray" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
